sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
 var j:Int = 0
	for (l<-0 to 50){
	for (k<-0 to getNombreValeurs()-2){
		if(plusPetitQue(j,k)){
			j = k
		}else{
			j
		}
		echenge(1,j)
	}
}
}
